# library_management_system

./: GFG.txt  Readme.txt
LibraryManagementSoftware/LibraryManagementSoftware/: CMakeLists.txt  addbook.cpp  addbook.h  addbook.ui  databaseheader.h  deletebook.cpp  deletebook.h  deletebook.ui  editbook.cpp  editbook.h  editbook.ui  findbook.cpp  findbook.h  findbook.ui  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  managebooks.cpp  managebooks.h  managebooks.ui
LibraryManagementSoftware/build-LibraryManagementSoftware-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
LibraryManagementSoftware/build-LibraryManagementSoftware-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-454809ee6bf67d201656.json  cmakeFiles-v1-ce96bc5dd57b7a451afb.json  codemodel-v2-f4d19065e977376f9cca.json  directory-.-Debug-04466b8cb44d620198ec.json  index-2023-03-11T22-08-40-0199.json  target-LibraryManagementSoftware-Debug-5f6ec4fb07c2e65114b8.json  target-LibraryManagementSoftware_autogen-Debug-90ff9ef29fd326144912.json
LibraryManagementSoftware/build-LibraryManagementSoftware-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
LibraryManagementSoftware/build-LibraryManagementSoftware-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
LibraryManagementSoftware/build-LibraryManagementSoftware-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.9C69F21544FDDC9F.idx  QMainWindow.7004E3B994B4663D.idx  __stddef_max_align_t.h.3E278DD46071B0F1.idx  _mingw.h.EA2961B58B91A2CE.idx  _mingw_ddk.h.D377B7B92026CE60.idx  _mingw_mac.h.AEE6A2F8F19DE255.idx  _mingw_off_t.h.DA1947F1B52A0C48.idx  _mingw_secapi.h.970CC0935F4A06DB.idx  _mingw_stat64.h.4AE6D958FE4E9755.idx  _timeval.h.6C65DF0AF18666E4.idx  algorithm.762E5FE367AD99E3.idx  algorithmfwd.h.97135489E13EB722.idx  align.h.6DCB80A58868B70C.idx  aligned_buffer.h.7A90DD66FD868496.idx  alloc_traits.h.2F27523B2A3FB039.idx  alloc_traits.h.6C757475F14BAAD1.idx  allocated_ptr.h.0B5E96586C426160.idx  allocator.h.0B5EEF6353023094.idx  array.043380E1BAB5F164.idx  assert.h.5E6022C11BF9A6A3.idx  assertions.h.2455B1FF4AC383CB.idx  atomic.8431EF2F64BE65F4.idx  atomic_base.h.BDADB551BFA3A95D.idx  atomic_lockfree_defines.h.706E62C2F4D5FE77.idx  atomic_word.h.5B45572A10DBBBEE.idx  atomicity.h.51D80674211B22D3.idx  auto_ptr.h.E3F7FB3132A06D55.idx  basic_string.h.E0C1C0FF6FADA9F1.idx  bit.D364F10DA6632CAE.idx  (+305 more)
